Updated readme, improved source code

--- a/sources/MoonActivePrint2Concole/appsettings.json
+++ b/sources/MoonActivePrint2Concole/appsettings.json
@@ -5,5 +5,6 @@
         }
     },
     "AllowedHosts": "*",
-    "redis.connection": "localhost:32768"
+    "redis.connection": "127.0.0.1:6379"
+    //"redis.connection": "localhost"
 }
